fix: fix tree printing